--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="content">
         <div class="column col-left reveal">
           <div class="img-card">
-            <img src="C:\Users\HP\Downloads\IMG_20240408_115724.jpg"alt="">
+            <img src="IMG_20240408_115724.jpg"alt="">
           </div>
         </div>
         <div class="column col-right reveal">
@@ -162,7 +162,7 @@ Skilled in optimizing websites for performance and accessibility.Strong communic
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="C:\Users\HP\Downloads\Screenshot_2024-04-06-18-16-35-41_e307a3f9df9f380ebaf106e1dc980bb6.jpg" alt="e-nespaper">
+            <img src="Screenshot_2024-04-06-18-16-35-41_e307a3f9df9f380ebaf106e1dc980bb6.jpg" alt="e-nespaper">
         </div>
         </div>
         <div class="title reveal">
