--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Skilled in optimizing websites for performance and accessibility.Strong communic
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="Screenshot_2024-04-06-18-16-35-41_e307a3f9df9f380ebaf106e1dc980bb6.jpg" alt="e-nespaper">
+            <img src="https://media.istockphoto.com/id/1330788505/vector/news-paper-care-logo-template-design.jpg?s=612x612&w=0&k=20&c=c9loKIAmPQ06pPh07dJny2iNKEv4BMhMXPZx9AGf8VE=" alt="e-nespaper">
         </div>
         </div>
         <div class="title reveal">
