--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Skilled in optimizing websites for performance and accessibility.Strong communic
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="https://media.istockphoto.com/id/1330788505/vector/news-paper-care-logo-template-design.jpg?s=612x612&w=0&k=20&c=c9loKIAmPQ06pPh07dJny2iNKEv4BMhMXPZx9AGf8VE=" alt="e-nespaper">
+          <img src="https://st4.depositphotos.com/1185628/24546/v/450/depositphotos_245467064-stock-illustration-newspaper-icon-vector-template.jpg " alt="e-newspaper">  
         </div>
         </div>
         <div class="title reveal">
